more implementation & tests